examples/example_052/example_052.v
Require Import Top.Prop.Foo.
Fail Check n.
